# SelfAware

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  soil-schema.json
backend/: pyproject.toml
backend/selfaware/: __init__.py  config.py  mcp_server.py
backend/selfaware/agents/: author.py  mock_author.py
backend/selfaware/agents/prompts/protocol_classes/: analog.md
backend/selfaware/analytics/: __init__.py  health.py  history.py  watcher.py
backend/selfaware/api/: app.py  handlers.py  rest.py  state.py  ws.py
backend/selfaware/bringup/: __init__.py  gate.py  harness.py  loop.py  models.py  plausibility.py  service.py
backend/selfaware/events/: __init__.py  bus.py  commands.py  envelope.py  payloads.py  types.py
backend/selfaware/hardware/: __init__.py  base.py  discovery.py  mock_board.py  oled_narrator.py  oled_render.py  raw_repl.py  serial_board.py  session.py  watcher.py
backend/selfaware/registry/: __init__.py  models.py  store.py
backend/tests/: conftest.py  test_analytics_health.py  test_author_agent.py  test_commission_loop.py  test_commission_service.py  test_envelope.py  test_event_bus.py  test_gate.py  test_mcp_rest.py  test_mcp_server.py  test_mock_author.py  test_mock_board.py  test_oled_narrator.py  test_plausibility.py  test_raw_repl_buffer.py  test_registry.py  test_session.py  test_ws_endpoint.py
docs/: agents.md  architecture.md  backend.md  demo-runbook.md  event-protocol.md  frontend.md  hardware-bringup.md  oled-narrator.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+91 files in other folders)
