[project]
name = "selfaware"
version = "0.1.0"
description = "SelfAware backend — Cursor for hardware: an agent that writes, deploys, tests, and self-repairs sensor drivers on a live Pico W"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic-ai>=0.4",
    "pyserial>=3.5",
    "logfire>=3.5",
    "httpx>=0.28",
    "fastmcp>=2.0",
    "websockets>=13",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1.6"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["selfaware"]
